force-app/src/objects/OrderApi__Credit_Note__c.object
<CustomObject>
    <description>Credit Notes track negative adjustments made to invoices.</description>
    <fields>
        <fullName>OrderApi__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Link to the customer&apos;s account record. Auto-populates with the related account&apos;s primary contact if not defined prior to entry.</description>
        <inlineHelpText>**System Calculated/Override** Link to the customer&apos;s account record. Auto-populates with the related account&apos;s primary contact if not defined prior to entry.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credit Notes</relationshipLabel>
        <relationshipName>Credit_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_City__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Billing City or Contact&apos;s Mailing City, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Billing City or Contact&apos;s Mailing City, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_Country__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Billing Country or Contact&apos;s Mailing Country, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Billing Country or Contact&apos;s Mailing Country, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_Postal_Code__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Billing Postal Code or Contact&apos;s Mailing Postal Code, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Billing Postal Code or Contact&apos;s Mailing Postal Code, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_State__c</fullName>
        <description>The value of this field will be updated with the Account&apos;s Billing State or Contact&apos;s Mailing State, based on &quot;Entity&quot; if not defined on record entry.</description>
        <inlineHelpText>The value of this field will be updated with the Account&apos;s Billing State or Contact&apos;s Mailing State, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
        <label>Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_Street__c</fullName>
        <description>**System Calculated/Conditional** Billing Street derives from the Contact Mailing Street or the Account Billing Street when Calculate Billing Details is checked.</description>
        <inlineHelpText>**System Calculated/Conditional** Billing Street derives from the Contact Mailing Street or the Account Billing Street when Calculate Billing Details is checked.</inlineHelpText>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Link to the customer&apos;s contact record. Auto-populates with the related account&apos;s primary contact if not defined prior to entry.</description>
        <inlineHelpText>**System Calculated/Override** Link to the customer&apos;s contact record. Auto-populates with the related account&apos;s primary contact if not defined prior to entry.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Credit Notes</relationshipLabel>
        <relationshipName>Credit_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Customer__c</fullName>
        <description>**System Calculated** Link to the customer&apos;s record, controlled by the &quot;Entity&quot; field.</description>
        <formula>IF(ISPICKVAL(OrderApi__Entity__c,&quot;Account&quot;), OrderApi__Account__r.Name, OrderApi__Contact__r.FirstName &amp; &quot; &quot; &amp; OrderApi__Contact__r.LastName)</formula>
        <inlineHelpText>**System Calculated** Link to the customer&apos;s record, controlled by the &quot;Entity&quot; field.</inlineHelpText>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>**System Calculated/Override** The date the credit note was created.</description>
        <inlineHelpText>**System Calculated/Override** The date the credit note was created.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Encrypted_Id__c</fullName>
        <description>This field shows this record&apos;s encrypted id used for external pages.</description>
        <inlineHelpText>This field shows this record&apos;s encrypted id used for external pages.</inlineHelpText>
        <label>Encrypted Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Entity__c</fullName>
        <description>**Required** Select &quot;Account&quot; if the credit note should be applied to the related account, select &quot;Contact&quot; if the credit note should be applied to the related &quot;Contact&quot;.</description>
        <inlineHelpText>**Required** Select &quot;Account&quot; if the credit note should be applied to the related account, select &quot;Contact&quot; if the credit note should be applied to the related &quot;Contact&quot;.</inlineHelpText>
        <label>Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Invoice_Number__c</fullName>
        <description>Invoice number related to the Invoice.</description>
        <formula>OrderApi__Invoice__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Invoice number related to the Invoice.</inlineHelpText>
        <label>Invoice Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Link to the invoice that generated the credit note.</description>
        <inlineHelpText>**System Calculated/Override** Link to the invoice that generated the credit note.</inlineHelpText>
        <label>Invoice</label>
        <referenceTo>OrderApi__Invoice__c</referenceTo>
        <relationshipLabel>Credit Notes</relationshipLabel>
        <relationshipName>Credit_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the credit note has been posted and transactions (journal entries) have been created.</description>
        <inlineHelpText>Checked if the credit note has been posted and transactions (journal entries) have been created.</inlineHelpText>
        <label>Is Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Memo__c</fullName>
        <description>Optional memo that will display on the credit note sent to the customer as well as on customer statements.</description>
        <inlineHelpText>Optional memo that will display on the credit note sent to the customer as well as on customer statements.</inlineHelpText>
        <label>Memo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OrderApi__Posted_Date__c</fullName>
        <description>**System Calculated/Override** The date the transaction posted.</description>
        <inlineHelpText>**System Calculated/Override** The date the transaction posted.</inlineHelpText>
        <label>Posted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order_Number__c</fullName>
        <description>Sales Order number related to the Sales Order.</description>
        <formula>OrderApi__Sales_Order__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sales Order number related to the Sales Order.</inlineHelpText>
        <label>Sales Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related Sales Order.</description>
        <inlineHelpText>Link to related Sales Order.</inlineHelpText>
        <label>Sales Order</label>
        <referenceTo>OrderApi__Sales_Order__c</referenceTo>
        <relationshipLabel>Credit Notes</relationshipLabel>
        <relationshipName>Credit_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Total__c</fullName>
        <description>**System Calculated** Sum of all adjustment lines</description>
        <inlineHelpText>**System Calculated** Sum of all adjustment lines</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Credit Note</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Credit Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>